--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,8 @@ python-engineio==4.0.0
 python-socketio==5.0.4
 
 # Async/WebSocket Support
-eventlet==0.31.0
-gunicorn==20.1.0
+gevent==21.12.0
+gunicorn==21.2.0
 
 # Database (Optional)
 mysql-connector-python==8.0.32
