--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,8 @@
-# Core Backend
 flask==2.0.1
 flask-socketio==5.3.4
-python-engineio==4.0.0
-python-socketio==5.0.4
-
-# Async/WebSocket Support
+flask-mysqldb==1.0.1
 gevent==21.12.0
 gunicorn==21.2.0
-
-# Database (Optional)
-mysql-connector-python==8.0.32
-python-dotenv==0.19.2
-
-# Security
 pyjwt==2.3.0
-cryptography==36.0.1
-
-# Utilities
 python-dotenv==0.19.2
-pytz==2021.3
+mysql-connector-python==8.0.32
