--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 flask==2.0.1
 flask-socketio==5.3.4
 flask-mysqldb==1.0.1
-gevent==21.12.0
+gevent==23.9.1  # Updated version
 gunicorn==21.2.0
 pyjwt==2.3.0
 python-dotenv==0.19.2
